--- a/index.html
+++ b/index.html
@@ -1,200 +1,259 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Top Rope Solo - Tromsø</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Top Rope Solo - Tromsø</title>
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  crossorigin=""
+/>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f4f8;
+    color: #333;
+    text-align: center;
+    padding: 20px;
+    margin: 0;
+  }
+  h1 {
+    color: #0066cc;
+    margin-bottom: 10px;
+  }
+  #info-text {
+    max-width: 800px;
+    margin: 0 auto 20px auto;
+    font-size: 18px;
+    color: #444;
+  }
+  #buttons {
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 12px;
+  }
+  button {
+    background-color: #0066cc;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    padding: 12px 22px;
+    cursor: pointer;
+    font-size: 18px;
+    transition: background-color 0.3s;
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
+  }
+  button:hover {
+    background-color: #004a99;
+  }
+  #map {
+    height: 500px;
+    width: 80vw;
+    max-width: 800px;
+    margin: 0 auto 20px auto;
+    border-radius: 12px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  }
+  #instagramBtn {
+    background-color: #e1306c; /* Instagram pink */
+    margin-top: 10px;
+  }
+  #instagramBtn:hover {
+    background-color: #b92e58;
+  }
+  #instagram-text {
+    max-width: 800px;
+    margin: 8px auto 0 auto;
+    font-size: 16px;
+    color: #555;
+  }
+  #instagram-video-container {
+    max-width: 95vw;
+    margin: 20px auto 0 auto;
+    text-align: center;
 
-    .button-container {
-      margin: 20px 0;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 10px;
-      align-items: center;
-    }
-
-    .location-btn {
-      padding: 14px 20px;
-      border: none;
-      border-radius: 5px;
-      background-color: #007BFF;
-      color: white;
-      cursor: pointer;
-      font-size: 18px;
-      font-weight: 600;
-      transition: background-color 0.3s;
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-      white-space: nowrap;
-      min-height: 44px; /* for consistent button height */
-    }
-
-    .location-btn:hover {
-      background-color: #0056b3;
-    }
-
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    flex-wrap: wrap;
+  }
+  .instagram-video-block {
+    width: 320px;
+    border-radius: 12px;
+    padding: 0;
+    margin: 12px 8px;
+    background-color: white;
+    box-sizing: border-box;
+    overflow: hidden;
+  }
+  .instagram-video-block h2 {
+    color: #0066cc;
+    margin: 8px 0;
+    font-size: 18px;
+  }
+  .instagram-video-block blockquote {
+    background: #FFF;
+    border: 0;
+    margin: 0 auto 12px auto;
+    width: 100%;
+    padding: 0;
+    box-shadow: none;
+  }
+  @media (max-width: 600px) {
     #map {
-      height: 500px;
-      width: 100%;
-      margin-top: 10px;
+      width: 95vw;
+      height: 350px;
     }
-
-    /* Container for all videos */
+    button {
+      font-size: 16px;
+      padding: 10px 16px;
+    }
+    #instagram-text {
+      font-size: 14px;
+    }
     #instagram-video-container {
-      max-width: 1200px;
-      margin: 20px auto 0 auto;
-      padding: 15px 24px;
-      border: 2px solid #ccc;
-      border-radius: 12px;
-      background-color: white;
-
-      display: flex;
-      justify-content: center;
-      gap: 24px;
-      flex-wrap: wrap;
+      max-width: 95vw;
+      flex-direction: column;
+      gap: 15px;
     }
-
-    /* Each video block */
     .instagram-video-block {
-      width: 340px;
-      flex-shrink: 0;
-      overflow: hidden;
-      margin: 0;
+      width: 100%;
     }
-
-    h3 {
-      margin-bottom: 8px;
+    .instagram-video-block h2 {
+      font-size: 16px;
     }
+  }
 
-    /* SVG icon sizes */
-    .icon {
-      width: 22px;
-      height: 22px;
-      fill: white;
-      flex-shrink: 0;
-    }
-
-  </style>
+  /* Ikon-stiler */
+  .icon {
+    width: 20px;
+    height: 20px;
+    fill: white;
+  }
+</style>
 </head>
 <body>
+  <h1>Top Rope Solo - Tromsø</h1>
 
-  <h1 style="margin-top:20px;">Top Rope Solo - Tromsø</h1>
-  <p style="max-width:800px; margin:10px auto;">
-    Explore Top Rope Solo areas in Tromsø. Select a location to see it on the map, or scroll down to watch climbing videos from the areas.
-  </p>
+  <div id="info-text">
+    Explore Top Rope Solo areas in Tromsø.
+  </div>
 
-  <div class="button-container">
+  <div id="buttons">
     <button id="overviewBtn" class="location-btn" aria-label="Show all locations">
-      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 2a10 10 0 1010 10A10.011 10.011 0 0012 2zm5.93 6H15a7 7 0 00-6 0H6.07a8.017 8.017 0 0111.86 0zM12 20a7.96 7.96 0 01-5.95-2.95h11.9A7.96 7.96 0 0112 20zM4 12a7.962 7.962 0 012.05-5.45A15.963 15.963 0 007.15 12a15.963 15.963 0 01-1.1 5.45A7.962 7.962 0 014 12z"/>
+      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
+        <path d="M15 18l-6-6 6-6"/>
       </svg>
       Show All
     </button>
-    <button class="location-btn" data-lat="69.69472" data-lng="18.63642" data-name="Korteidet" aria-label="Korteidet">
-      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-        <path d="M12 2L3 20h18L12 2zM12 6.5l3.5 7h-7l3.5-7z" />
+
+    <button data-lat="69.69472" data-lng="18.63642" data-name="Korteidet" class="location-btn" aria-label="Korteidet">
+      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 2L15 8l6 1-4 4 1 6-5-3-5 3 1-6-4-4 6-1 3-6z"/>
       </svg>
       Korteidet
     </button>
-    <button class="location-btn" data-lat="69.78386" data-lng="18.78913" data-name="Lyfjorddalen" aria-label="Lyfjorddalen">
-      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-        <path d="M12 2L3 20h18L12 2zM12 6.5l3.5 7h-7l3.5-7z" />
+
+    <button data-lat="69.78386" data-lng="18.78913" data-name="Lyfjorddalen" class="location-btn" aria-label="Lyfjorddalen">
+      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 2L15 8l6 1-4 4 1 6-5-3-5 3 1-6-4-4 6-1 3-6z"/>
       </svg>
       Lyfjorddalen
     </button>
-    <button class="location-btn" data-lat="69.65974" data-lng="18.95441" data-name="Valhall" aria-label="Valhall">
-      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
-        <path d="M12 2L3 20h18L12 2zM12 6.5l3.5 7h-7l3.5-7z" />
+
+    <button data-lat="69.65974" data-lng="18.95441" data-name="Valhall" class="location-btn" aria-label="Valhall">
+      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 2L15 8l6 1-4 4 1 6-5-3-5 3 1-6-4-4 6-1 3-6z"/>
       </svg>
       Valhall
     </button>
-    <button id="instagramBtn" class="location-btn" aria-label="Instagram Rope Solo Man profile">
-      <svg class="icon" viewBox="0 0 24 24" fill="white" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-        <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 2A3.75 3.75 0 004 7.75v8.5A3.75 3.75 0 007.75 20h8.5a3.75 3.75 0 003.75-3.75v-8.5A3.75 3.75 0 0016.25 4h-8.5zM12 7a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm4.5-3.5a1.25 1.25 0 110 2.5 1.25 1.25 0 010-2.5z"/>
-      </svg>
-      Rope Solo Man
-    </button>
   </div>
 
-  <div id="map"></div>
+  <button id="instagramBtn" aria-label="Instagram profile Rope Solo Man">
+    <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white" xmlns="http://www.w3.org/2000/svg">
+      <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 2A3.75 3.75 0 004 7.75v8.5A3.75 3.75 0 007.75 20h8.5a3.75 3.75 0 003.75-3.75v-8.5A3.75 3.75 0 0016.25 4h-8.5zM12 7a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm4.5-3.5a1.25 1.25 0 110 2.5 1.25 1.25 0 010-2.5z"/>
+    </svg>
+    Rope Solo Man
+  </button>
 
   <div id="instagram-video-container">
     <div class="instagram-video-block">
-      <h3>Video from Korteidet</h3>
-      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DKxCoz_tbzW/" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:320px; width:100%; display:block;">
-        <a href="https://www.instagram.com/reel/DKxCoz_tbzW/" target="_blank" rel="noopener noreferrer"></a>
-      </blockquote>
+      <h2>Video from Korteidet</h2>
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DKxCoz_tbzW/" data-instgrm-version="14"></blockquote>
     </div>
+
     <div class="instagram-video-block">
-      <h3>Video from Lyfjorddalen</h3>
-      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DL8NKszNihY/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:320px; width:100%; display:block;">
-        <a href="https://www.instagram.com/reel/DL8NKszNihY/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener noreferrer"></a>
-      </blockquote>
+      <h2>Video from Lyfjorddalen</h2>
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DL8NKszNihY/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" data-instgrm-version="14"></blockquote>
     </div>
+
     <div class="instagram-video-block">
-      <h3>Video from Valhall</h3>
-      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DLU4pwkt80j/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" data-instgrm-version="14" style="background:#FFF; border:0; margin:0 auto; max-width:320px; width:100%; display:block;">
-        <a href="https://www.instagram.com/reel/DLU4pwkt80j/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank" rel="noopener noreferrer"></a>
-      </blockquote>
+      <h2>Video from Valhall</h2>
+      <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DLU4pwkt80j/" data-instgrm-version="14"></blockquote>
     </div>
   </div>
 
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
   <script async src="//www.instagram.com/embed.js"></script>
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    const map = L.map('map').setView([69.7, 19.0], 10);
-
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '© OpenStreetMap contributors'
-    }).addTo(map);
-
     const locations = [
-      { 
-        name: "Korteidet", 
-        coords: [69.69472, 18.63642], 
-        popup: `<b>Korteidet</b><br>More info coming.<br><a href="https://klatreforer.tromsoklatring.no/area/3062" target="_blank" rel="noopener noreferrer">Climbingarea - Korteidet</a>`
+      {
+        name: 'Korteidet',
+        lat: 69.69472,
+        lng: 18.63642,
+        popup: `<strong>Korteidet</strong><br>
+                More info coming.<br>
+                <a href="https://klatreforer.tromsoklatring.no/area/3062" target="_blank" rel="noopener noreferrer">Climbingarea - Korteidet</a>`
       },
-      { 
-        name: "Lyfjorddalen", 
-        coords: [69.78386, 18.78913], 
-        popup: `<b>Lyfjorddalen</b><br>More info coming.<br><a href="https://klatreforer.tromsoklatring.no/area/2868" target="_blank" rel="noopener noreferrer">Climbingarea - Lyfjorddalen</a>`
+      {
+        name: 'Lyfjorddalen',
+        lat: 69.78386,
+        lng: 18.78913,
+        popup: `<strong>Lyfjorddalen</strong><br>
+                More info coming.<br>
+                <a href="https://klatreforer.tromsoklatring.no/area/2868" target="_blank" rel="noopener noreferrer">Climbingarea - Lyfjorddalen</a>`
       },
-      { 
-        name: "Valhall", 
-        coords: [69.65974, 18.95441], 
-        popup: `<b>Valhall</b><br>Impressive climbing location.` 
+      {
+        name: 'Valhall',
+        lat: 69.65974,
+        lng: 18.95441,
+        popup: `<strong>Valhall</strong><br>More info coming.`
       }
     ];
 
-    const markers = {};
-    const group = L.featureGroup();
+    const map = L.map('map');
 
-    locations.forEach(loc => {
-      const marker = L.marker(loc.coords).addTo(map).bindPopup(loc.popup);
-      markers[loc.name] = marker;
-      group.addLayer(marker);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution:
+        '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+    }).addTo(map);
+
+    const markers = {};
+
+    locations.forEach(({name, lat, lng, popup}) => {
+      const marker = L.marker([lat, lng]).addTo(map).bindPopup(popup);
+      markers[name] = marker;
     });
 
-    document.querySelectorAll('.location-btn').forEach(button => {
+    // Zoom out to fit all markers initially
+    const group = new L.featureGroup(Object.values(markers));
+    map.fitBounds(group.getBounds().pad(0.2));
+
+    const buttons = document.querySelectorAll('#buttons button[data-name]');
+    buttons.forEach(button => {
       button.addEventListener('click', () => {
-        const lat = parseFloat(button.getAttribute('data-lat'));
-        const lng = parseFloat(button.getAttribute('data-lng'));
+        const lat = button.getAttribute('data-lat');
+        const lng = button.getAttribute('data-lng');
         const name = button.getAttribute('data-name');
 
-        if (name && markers[name]) {
-          map.setView([lat, lng], 15);
-          markers[name].openPopup();
-        }
+        map.setView([lat, lng], 15);
+        markers[name].openPopup();
       });
     });
 
@@ -203,7 +262,7 @@
     });
 
     document.getElementById('instagramBtn').addEventListener('click', () => {
-      window.open('https://www.instagram.com/ropesoloman', '_blank');
+      window.open('https://www.instagram.com/rope.solo.man/', '_blank');
     });
   </script>
 </body>
