--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
   #instagramBtn:hover {
     background-color: #b92e58;
   }
+  #instagram-text {
+    max-width: 800px;
+    margin: 8px auto 0 auto;
+    font-size: 16px;
+    color: #555;
+  }
   #instagram-video-container {
     max-width: 95vw;
     margin: 20px auto 0 auto;
@@ -106,6 +112,9 @@
     button {
       font-size: 16px;
       padding: 10px 16px;
+    }
+    #instagram-text {
+      font-size: 14px;
     }
     #instagram-video-container {
       max-width: 95vw;
@@ -171,6 +180,10 @@
     </svg>
     Rope Solo Man
   </button>
+
+  <div id="instagram-text">
+    You can see pictures and video from Top Rope Solo on this profile
+  </div>
 
   <div id="instagram-video-container">
     <div class="instagram-video-block">
