--- a/index.html
+++ b/index.html
@@ -137,22 +137,23 @@
 
   <div id="buttons">
     <button data-lat="69.69472" data-lng="18.63642" data-name="Korteidet" class="location-btn" aria-label="Korteidet">
-      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 2L15 8l6 1-4 4 1 6-5-3-5 3 1-6-4-4 6-1 3-6z"/>
+      <!-- Fjell ikon -->
+      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white" stroke="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M2 21h20L12 2 2 21z"/>
       </svg>
       Korteidet
     </button>
 
     <button data-lat="69.78386" data-lng="18.78913" data-name="Lyfjorddalen" class="location-btn" aria-label="Lyfjorddalen">
-      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 2L15 8l6 1-4 4 1 6-5-3-5 3 1-6-4-4 6-1 3-6z"/>
+      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white" stroke="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M2 21h20L12 2 2 21z"/>
       </svg>
       Lyfjorddalen
     </button>
 
     <button data-lat="69.65974" data-lng="18.95441" data-name="Valhall" class="location-btn" aria-label="Valhall">
-      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 2L15 8l6 1-4 4 1 6-5-3-5 3 1-6-4-4 6-1 3-6z"/>
+      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white" stroke="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M2 21h20L12 2 2 21z"/>
       </svg>
       Valhall
     </button>
@@ -171,6 +172,8 @@
     </svg>
     Rope Solo Man
   </button>
+
+  <div id="map"></div>
 
   <div id="instagram-video-container">
     <div class="instagram-video-block">
