--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 12px;
-    align-items: center; /* for vertikal sentrering */
+    align-items: center;
   }
   button {
     background-color: #0066cc;
@@ -68,28 +68,26 @@
     background-color: #b92e58;
   }
 
-  /* Felles ramme rundt alle videoer */
+  /* Lett, lys ramme bare rundt videoene */
   #instagram-video-container {
-    max-width: 98vw;
-    margin: 20px auto 0 auto;
-    text-align: center;
-    border: 3px solid #0066cc;
-    border-radius: 12px;
-    padding: 15px 10px;
-    box-sizing: border-box;
-
     display: flex;
     justify-content: center;
     gap: 24px;
     flex-wrap: wrap;
+    max-width: 1000px;
+    margin: 20px auto 0 auto;
+    padding: 15px 20px;
+    border: 2px solid #d1e0f0;
+    border-radius: 12px;
+    background-color: #fafcff;
   }
   .instagram-video-block {
     width: 320px;
     border-radius: 12px;
-    padding: 0;
-    margin: 12px 8px;
-    background-color: white;
+    background: white;
     box-sizing: border-box;
+    padding: 0;
+    margin: 8px;
     overflow: hidden;
   }
   .instagram-video-block h2 {
@@ -128,7 +126,7 @@
     }
   }
 
-  /* Ikon-stiler */
+  /* Enklere fjell-ikon */
   .icon {
     width: 20px;
     height: 20px;
@@ -145,23 +143,23 @@
 
   <div id="buttons">
     <button data-lat="69.69472" data-lng="18.63642" data-name="Korteidet" class="location-btn" aria-label="Korteidet">
-      <!-- Detaljert fjell ikon -->
-      <svg class="icon" viewBox="0 0 64 64" aria-hidden="true" focusable="false" fill="white" xmlns="http://www.w3.org/2000/svg">
-        <path d="M32 4L12 44h12v16h16V44h12L32 4zM20 44l12-28 12 28H20z"/>
+      <!-- Enklere fjell ikon -->
+      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 2L2 22h20L12 2z"/>
       </svg>
       Korteidet
     </button>
 
     <button data-lat="69.78386" data-lng="18.78913" data-name="Lyfjorddalen" class="location-btn" aria-label="Lyfjorddalen">
-      <svg class="icon" viewBox="0 0 64 64" aria-hidden="true" focusable="false" fill="white" xmlns="http://www.w3.org/2000/svg">
-        <path d="M32 4L12 44h12v16h16V44h12L32 4zM20 44l12-28 12 28H20z"/>
+      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 2L2 22h20L12 2z"/>
       </svg>
       Lyfjorddalen
     </button>
 
     <button data-lat="69.65974" data-lng="18.95441" data-name="Valhall" class="location-btn" aria-label="Valhall">
-      <svg class="icon" viewBox="0 0 64 64" aria-hidden="true" focusable="false" fill="white" xmlns="http://www.w3.org/2000/svg">
-        <path d="M32 4L12 44h12v16h16V44h12L32 4zM20 44l12-28 12 28H20z"/>
+      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 2L2 22h20L12 2z"/>
       </svg>
       Valhall
     </button>
