--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     background-color: #f0f4f8;
     color: #333;
     text-align: center;
-    padding: 20px;
+    padding: 20px 10px 40px;
     margin: 0;
   }
   h1 {
@@ -29,25 +29,24 @@
     color: #444;
   }
   #buttons {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 12px;
-    align-items: center;
   }
   button {
     background-color: #0066cc;
     color: white;
     border: none;
     border-radius: 6px;
-    padding: 12px 22px;
+    padding: 12px 20px;
     cursor: pointer;
-    font-size: 18px;
-    transition: background-color 0.3s;
+    font-size: 17px;
     display: inline-flex;
     align-items: center;
-    gap: 10px;
+    gap: 8px;
+    transition: background-color 0.3s;
   }
   button:hover {
     background-color: #004a99;
@@ -56,81 +55,85 @@
     height: 500px;
     width: 100vw;
     max-width: 100%;
-    margin: 0 auto 20px auto;
-    border-radius: 12px 12px 0 0;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+    margin: 0;
+    border-radius: 0;
+    box-shadow: none;
   }
+  /* Fjell-ikon stil */
+  .mountain-icon {
+    width: 22px;
+    height: 22px;
+    fill: #0066cc;
+  }
+
+  /* Instagram knapp styling */
   #instagramBtn {
     background-color: #e1306c; /* Instagram pink */
-    margin-top: 0;
+    margin: 0;
   }
   #instagramBtn:hover {
     background-color: #b92e58;
   }
-
-  /* Lett, lys ramme bare rundt videoene */
+  /* Video container med lys bakgrunn og rundede hjørner */
   #instagram-video-container {
+    max-width: 960px;
+    margin: 30px auto 0 auto;
+    padding: 18px 16px;
+    background-color: #fafafa;
+    border: 1.5px solid #ddd;
+    border-radius: 14px;
     display: flex;
     justify-content: center;
-    gap: 24px;
+    gap: 20px;
     flex-wrap: wrap;
-    max-width: 1000px;
-    margin: 20px auto 0 auto;
-    padding: 15px 20px;
-    border: 2px solid #d1e0f0;
-    border-radius: 12px;
-    background-color: #fafcff;
   }
   .instagram-video-block {
-    width: 320px;
+    width: 300px;
     border-radius: 12px;
-    background: white;
-    box-sizing: border-box;
-    padding: 0;
-    margin: 8px;
     overflow: hidden;
+    background-color: white;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+    padding: 12px;
+    box-sizing: border-box;
   }
   .instagram-video-block h2 {
     color: #0066cc;
-    margin: 8px 0;
+    margin-bottom: 8px;
     font-size: 18px;
   }
   .instagram-video-block blockquote {
-    background: #FFF;
-    border: 0;
-    margin: 0 auto 12px auto;
-    width: 100%;
+    margin: 0;
     padding: 0;
-    box-shadow: none;
+    border: none;
   }
-  @media (max-width: 600px) {
-    #map {
-      width: 100vw;
-      height: 350px;
-    }
-    button {
-      font-size: 16px;
-      padding: 10px 16px;
-    }
+  @media (max-width: 960px) {
     #instagram-video-container {
-      max-width: 95vw;
-      flex-direction: column;
-      gap: 15px;
-      padding: 15px;
+      max-width: 100%;
+      padding: 14px 10px;
     }
     .instagram-video-block {
-      width: 100%;
-    }
-    .instagram-video-block h2 {
-      font-size: 16px;
+      width: 45vw;
+      min-width: 260px;
     }
   }
-
-  /* Enklere fjell-ikon */
-  .icon {
-    width: 20px;
-    height: 20px;
-    fill: white;
+  @media (max-width: 600px) {
+    #buttons {
+      justify-content: center;
+      gap: 8px;
+    }
+    button {
+      font-size: 15px;
+      padding: 10px 14px;
+    }
+    #instagram-video-container {
+      flex-direction: column;
+      align-items: center;
+      gap: 18px;
+    }
+    .instagram-video-block {
+      width: 90vw;
+      max-width: 360px;
+    }
   }
 </style>
 </head>
@@ -142,37 +145,36 @@
   </div>
 
   <div id="buttons">
-    <button data-lat="69.69472" data-lng="18.63642" data-name="Korteidet" class="location-btn" aria-label="Korteidet">
-      <!-- Enklere fjell ikon -->
-      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 2L2 22h20L12 2z"/>
+    <button id="overviewBtn" aria-label="Show all locations">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="white" height="20" width="20" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+      </svg>
+      Show all
+    </button>
+
+    <button data-lat="69.69472" data-lng="18.63642" data-name="Korteidet" aria-label="Show Korteidet location">
+      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
       </svg>
       Korteidet
     </button>
 
-    <button data-lat="69.78386" data-lng="18.78913" data-name="Lyfjorddalen" class="location-btn" aria-label="Lyfjorddalen">
-      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 2L2 22h20L12 2z"/>
+    <button data-lat="69.78386" data-lng="18.78913" data-name="Lyfjorddalen" aria-label="Show Lyfjorddalen location">
+      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
       </svg>
       Lyfjorddalen
     </button>
 
-    <button data-lat="69.65974" data-lng="18.95441" data-name="Valhall" class="location-btn" aria-label="Valhall">
-      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 2L2 22h20L12 2z"/>
+    <button data-lat="69.65974" data-lng="18.95441" data-name="Valhall" aria-label="Show Valhall location">
+      <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
       </svg>
       Valhall
     </button>
 
-    <button id="overviewBtn" aria-label="Show all locations">
-      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
-        <path d="M15 18l-6-6 6-6"/>
-      </svg>
-      Show All
-    </button>
-
     <button id="instagramBtn" aria-label="Instagram profile Rope Solo Man">
-      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false" fill="white" xmlns="http://www.w3.org/2000/svg">
+      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
         <path d="M7.75 2h8.5A5.75 5.75 0 0122 7.75v8.5A5.75 5.75 0 0116.25 22h-8.5A5.75 5.75 0 012 16.25v-8.5A5.75 5.75 0 017.75 2zm0 2A3.75 3.75 0 004 7.75v8.5A3.75 3.75 0 007.75 20h8.5a3.75 3.75 0 003.75-3.75v-8.5A3.75 3.75 0 0016.25 4h-8.5zM12 7a5 5 0 110 10 5 5 0 010-10zm0 2a3 3 0 100 6 3 3 0 000-6zm4.5-3.5a1.25 1.25 0 110 2.5 1.25 1.25 0 010-2.5z"/>
       </svg>
       Rope Solo Man
@@ -186,12 +188,10 @@
       <h2>Video from Korteidet</h2>
       <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DKxCoz_tbzW/" data-instgrm-version="14"></blockquote>
     </div>
-
     <div class="instagram-video-block">
       <h2>Video from Lyfjorddalen</h2>
       <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DL8NKszNihY/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" data-instgrm-version="14"></blockquote>
     </div>
-
     <div class="instagram-video-block">
       <h2>Video from Valhall</h2>
       <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DLU4pwkt80j/" data-instgrm-version="14"></blockquote>
@@ -206,23 +206,19 @@
         name: 'Korteidet',
         lat: 69.69472,
         lng: 18.63642,
-        popup: `<strong>Korteidet</strong><br>
-                More info coming.<br>
-                <a href="https://klatreforer.tromsoklatring.no/area/3062" target="_blank" rel="noopener noreferrer">Climbingarea - Korteidet</a>`
+        popup: '<strong>Korteidet</strong><br>More info coming.<br><a href="https://klatreforer.tromsoklatring.no/area/3062" target="_blank" rel="noopener noreferrer">Climbingarea - Korteidet</a>'
       },
       {
         name: 'Lyfjorddalen',
         lat: 69.78386,
         lng: 18.78913,
-        popup: `<strong>Lyfjorddalen</strong><br>
-                More info coming.<br>
-                <a href="https://klatreforer.tromsoklatring.no/area/2868" target="_blank" rel="noopener noreferrer">Climbingarea - Lyfjorddalen</a>`
+        popup: '<strong>Lyfjorddalen</strong><br>More info coming.<br><a href="https://klatreforer.tromsoklatring.no/area/2868" target="_blank" rel="noopener noreferrer">Climbingarea - Lyfjorddalen</a>'
       },
       {
         name: 'Valhall',
         lat: 69.65974,
         lng: 18.95441,
-        popup: `<strong>Valhall</strong><br>More info coming.`
+        popup: '<strong>Valhall</strong><br>More info coming.'
       }
     ];
 
@@ -234,14 +230,25 @@
         '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     }).addTo(map);
 
+    const mountainIcon = L.divIcon({
+      html: `
+        <svg class="mountain-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="22" height="22" fill="#0066cc" aria-hidden="true" focusable="false">
+          <path d="M12 2L2 20h20L12 2zM12 6.5l5.5 11H6.5L12 6.5z"/>
+        </svg>
+      `,
+      className: '',
+      iconSize: [22, 22],
+      iconAnchor: [11, 22],
+      popupAnchor: [0, -22]
+    });
+
     const markers = {};
 
     locations.forEach(({name, lat, lng, popup}) => {
-      const marker = L.marker([lat, lng]).addTo(map).bindPopup(popup);
+      const marker = L.marker([lat, lng], {icon: mountainIcon}).addTo(map).bindPopup(popup);
       markers[name] = marker;
     });
 
-    // Zoom out to fit all markers initially
     const group = new L.featureGroup(Object.values(markers));
     map.fitBounds(group.getBounds().pad(0.2));
 
